# AMPI

./: .gitignore  CMakeLists.txt
src/: main.cpp
